# my-backtest4

./: .gitignore  BUILD_VALIDATION.txt  CHANGELOG.md  PROJECT_STRUCTURE.txt  README.md  README.txt  RUN_NOW.cmd  START_HERE.txt  config.json  pyproject.toml  requirements.txt  run.ps1  search.py  search_gate.py
.github/workflows/: tests.yml
btsearch/: checkpoint.py  cli.py  config.py  data_loader.py  engine.py  grids.py  indicators.py  metrics.py  pipeline.py  ranking.py  report.py  walk_forward.py
btsearch/strategies/: __init__.py  common.py  mean_reversion.py  momentum.py  trend.py  volatility.py  volume.py
docs/: README.md  SCREENING_GATES.md
output/: 01_phase1_all_results.csv  01_phase1_insufficient_sample.csv  01_train_all.csv  01_train_all.parquet  02_phase1_top_by_family.csv  02_validation_shortlist.csv  02_validation_shortlist.parquet  03_final_oos.csv  03_final_oos.parquet  03_phase2_refined_results.csv  04_walk_forward_results.csv  04b_walk_forward_aggregate.csv  05_top_expectancy.csv  06_top_robust.csv  BEST_EXPECTANCY_CONFIG.json  BEST_FROZEN_CONFIG.json  BEST_ROBUST_CONFIG.json  FINAL_REPORT.txt  FINAL_RESULT.txt
output/walk_forward_checkpoints/: F01_train.csv  F01_validation.csv  F02_train.csv  (+7 more)
tests/: _time_engine.py  baseline_engine.json  conftest.py  engine_equiv_utils.py  gen_baseline.py  test_checkpoint.py  test_engine_optimization.py  test_no_lookahead.py  test_r_calculation.py  test_ranking.py  test_registry_and_grids.py  test_report_output.py  test_search_gate.py  test_signal_shift.py  test_time_filters.py  test_walk_forward.py
